CHANGES.txt - 06/07/2003
------------------------

CHANGES IN CUPS V1.1.20rc1

	- The ppdEmitJCL() function wrote JCL commands to stdout
	  instead of the passed file pointer (STR #142)
	- The httpGets() function could, in certain states,
	  block waiting for data (STR #132)
	- The cupsEmitJCL() function not outputs an empty @PJL
	  command after the PJL language escape to work around
	  bugs in certain PJL implementations (STR #131)
	- The cupsEmit*() functions didn't set the orientation
	  value properly (STR #127)
	- The cups.spec file didn't list the rc2.d init
	  directory or the cupstestppd file (STR #134)


CHANGES IN CUPS V1.1.19

	- The GNU TLS code incorrectly used
	  gnutls_check_pending() instead of
	  gnutls_record_check_pending() (STR #128)
	- The ppdEmit() functions output "PageSize Custom"
	  instead of "CustomPageSize True" in the DSC comments.
	  Also, the custom page size code did not use the
	  ParamCustomPageSize attributes (STR #127)
	- The cupstestppd command did not list the conflicting
	  options (STR #123)
	- The lpq command did not ensure that there was
	  whitespace between the fields in the job listing (STR
	  #117)
	- The German web templates had errors (STR #119)
	- The configure script didn't specify the static
	  libraries properly when configuring with the
	  --disable-shared option (STR #104)
	- The cups.list file used file dependencies for package
	  formats other than portable, RPM, and Debian (STR #98)
	- cupsLangGet() didn't use its language cache (STR #97)
	- "lpq -P" would segfault instead of showing a usage
	  message (STR #94)
	- Fixed compiler warnings in pdftops filter (STR #96)


CHANGES IN CUPS V1.1.19rc5

	- Jobs with banner pages that were printed to implicit
	  classes would get double banner pages for each
	  file/banner in the job (STR #68)
	- The mime.convs file was missing the filter definition
	  for Windows BMP (image/x-bitmap) files (STR #85)
	- The scheduler allowed some READ-ONLY job attributes to